--- a/pyspark-notebook/Statistical analysis chart.ipynb
+++ b/pyspark-notebook/Statistical analysis chart.ipynb
@@ -106,7 +106,8 @@
     "from nltk.tokenize import word_tokenize\n",
     "from collections import Counter\n",
     "import pandas as pd\n",
-    "from wordcloud import WordCloud"
+    "from wordcloud import WordCloud\n",
+    "from pymongo import MongoClient"
    ]
   },
   {
@@ -125,8 +126,6 @@
     }
    ],
    "source": [
-    "from pymongo import MongoClient\n",
-    "\n",
     "username = \"root\"  \n",
     "password = \"root\"  \n",
     "host = \"192.168.214.1\"\n",
